[gd_scene load_steps=3 format=3 uid="uid://bvq1n6pu088si"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_jwgs2"]
[ext_resource type="FontFile" uid="uid://ckfd322enrcy6" path="res://fonts/BlackOpsOne-Regular.ttf" id="2_sswto"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.45, 1.45)
script = ExtResource("1_jwgs2")

[node name="Winner1" type="Label" parent="."]
layout_mode = 2
offset_left = 200.0
offset_top = 70.0
offset_right = 550.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("2_sswto")
theme_override_font_sizes/font_size = 60
text = "WINNER"
horizontal_alignment = 1

[node name="Winner2" type="Label" parent="."]
layout_mode = 2
offset_left = 575.0
offset_top = 70.0
offset_right = 925.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_sswto")
theme_override_font_sizes/font_size = 60
text = "WINNER"
horizontal_alignment = 1

[node name="Draw" type="Label" parent="."]
layout_mode = 2
offset_left = 387.5
offset_top = 70.0
offset_right = 737.5
offset_bottom = 146.0
theme_override_colors/font_color = Color(0.55714, 0.538267, 0.514332, 1)
theme_override_fonts/font = ExtResource("2_sswto")
theme_override_font_sizes/font_size = 60
text = "DRAW"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 200.0
offset_top = 150.0
offset_right = 550.0
offset_bottom = 350.0
alignment = 1

[node name="PlayerTitre" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Player 1"
horizontal_alignment = 1

[node name="Round" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Round won: "
horizontal_alignment = 1

[node name="Shots" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Shots fired: "
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 575.0
offset_top = 150.0
offset_right = 925.0
offset_bottom = 350.0
alignment = 1

[node name="PlayerTitre" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Player 2"
horizontal_alignment = 1

[node name="Round" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Round won: "
horizontal_alignment = 1

[node name="Shots" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Shots fired: "
horizontal_alignment = 1

[node name="Replay" type="Button" parent="."]
layout_mode = 2
offset_left = 225.0
offset_top = 375.0
offset_right = 900.0
offset_bottom = 475.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sswto")
theme_override_font_sizes/font_size = 60
text = "Replay"

[node name="Menu" type="Button" parent="."]
layout_mode = 2
offset_left = 225.0
offset_top = 480.0
offset_right = 900.0
offset_bottom = 580.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_sswto")
theme_override_font_sizes/font_size = 60
text = "Return to menu"

[connection signal="button_up" from="Replay" to="." method="_on_button_up" binds= ["replay"]]
[connection signal="button_up" from="Menu" to="." method="_on_button_up" binds= ["menu"]]
